--- a/frontend-gateway/package.json
+++ b/frontend-gateway/package.json
@@ -7,18 +7,7 @@
     "start": "node index.js",
     "build": "echo \"Building the frontend gateway...\"",
     "dev": "nodemon index.js",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "prettier": "prettier --write .",
-    "prettier:check": "prettier --check .",
-    "prettier:fix": "prettier --write .",
-    "test:unit": "jest --config jest.config.js --runInBand",
-    "test:integration": "jest --config jest.config.js --runInBand",
-    "test:e2e": "jest --config jest.config.js --runInBand",
-    "test:all": "jest --config jest.config.js --runInBand",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -27,5 +16,10 @@
     "express": "^5.1.0",
     "nodemon": "^3.1.9",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "supertest": "^7.1.0"
   }
 }
