--- a/todo-service/package.json
+++ b/todo-service/package.json
@@ -12,11 +12,15 @@
   "name": "todo-service",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
+    "supertest": "^7.1.0"
+  },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+     "test": "jest --runInBand"
   },
   "keywords": [],
   "author": "",
