--- a/.github/workflows/todo-service.yml
+++ b/.github/workflows/todo-service.yml
@@ -1,10 +1,10 @@
-name: CI/CD • Frontend Service
+name: CI/CD • Todo Service
 
 on:
   push:
     paths:
-      - 'frontend-service/**'
-      - '.github/workflows/frontend-service.yml'
+      - 'todo-service/**'
+      - '.github/workflows/todo-service.yml'
 
 jobs:
   build-and-deploy:
@@ -19,7 +19,7 @@ jobs:
 
       - name: Install dependencies & run tests
         run: |
-          cd frontend-gateway
+          cd todo-service
           npm ci
           npm test
 
@@ -32,14 +32,14 @@ jobs:
 
       - name: Build with Cloud Build
         run: |
-          gcloud builds submit frontend-service \
-            --tag=gcr.io/${{ secrets.GCP_PROJECT_ID }}/frontend-service:${{ github.sha }}
+          gcloud builds submit todo-service \
+            --tag=gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-service:${{ github.sha }}
 
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy frontend-service \
-            --image=gcr.io/${{ secrets.GCP_PROJECT_ID }}/frontend-service:${{ github.sha }} \
+          gcloud run deploy todo-service \
+            --image=gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-service:${{ github.sha }} \
             --platform=managed \
             --region=${{ secrets.GCP_REGION || 'us-central1' }} \
             --allow-unauthenticated \
-            --port=3002
+            --port=3001
