--- a/.github/workflows/todo-service.yml
+++ b/.github/workflows/todo-service.yml
@@ -1,10 +1,8 @@
 name: CI/CD • Todo Service
 
 on:
-  push:
-    paths:
-      - 'todo-service/**'
-      - '.github/workflows/todo-service.yml'
+  workflow_dispatch:   # Manual trigger
+
 
 jobs:
   build-and-deploy:
@@ -33,7 +31,8 @@ jobs:
       - name: Build with Cloud Build
         run: |
           gcloud builds submit todo-service \
-            --tag=gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-service:${{ github.sha }}
+            --tag=gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-service:${{ github.sha }} \
+            --dockerfile=todo-service/dockerfile
 
       - name: Deploy to Cloud Run
         run: |
