--- a/.github/workflows/frontend-service.yml
+++ b/.github/workflows/frontend-service.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Build with Cloud Build
         run: |
+          cd frontend-gateway
           gcloud builds submit frontend-service \
             --tag=gcr.io/${{ secrets.GCP_PROJECT_ID }}/frontend-service:${{ github.sha }}
 
