--- a/.github/workflows/user-service.yml
+++ b/.github/workflows/user-service.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Build with Cloud Build
         run: |
+          cd user-service
           gcloud builds submit user-service \
             --tag=gcr.io/${{ secrets.GCP_PROJECT_ID }}/user-service:${{ github.sha }}
 
