--- a/.github/workflows/todo-service.yml
+++ b/.github/workflows/todo-service.yml
@@ -35,8 +35,10 @@ jobs:
       - name: Build with Cloud Build
         run: |
           cd todo-service
-          gcloud builds submit todo-service \
+          gcloud builds submit . \
+            --region=${{ secrets.GCP_REGION  }} \
             --tag=gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-service:${{ github.sha }}
+            
 
       - name: Deploy to Cloud Run
         run: |
