--- a/.github/workflows/todo-service.yml
+++ b/.github/workflows/todo-service.yml
@@ -1,8 +1,7 @@
-name: CI/CD • Todo Service
+name: CI/CD  Todo Service
 
 on:
-  workflow_dispatch:   # Manual trigger
-
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
@@ -12,7 +11,7 @@ jobs:
       id-token: write
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Authenticate to GCP
@@ -26,27 +25,26 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           export_default_credentials: true
 
-      - name: Install dependencies & run tests
+      - name: Configure Docker for GCR
+        run: |
+          gcloud auth configure-docker
+
+      - name: Build and push Docker image
         run: |
           cd todo-service
-          npm ci
-          npm test
+          IMAGE=gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-service:${{ github.sha }}
+          docker build -t "$IMAGE" .
+          docker push "$IMAGE"
 
-      - name: Build with Cloud Build
+      - name: Get GKE credentials
         run: |
-          cd todo-service
-          gcloud builds submit . \
-            --region=${{ secrets.GCP_REGION  }} \
-            --gcs-source-staging-dir=gs://sit737-cloudbuild-staging/source \
-            --dockerfile=./Dockerfile \
-            --tag=gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-service:${{ github.sha }}
-            
+          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} \
+            --zone ${{ secrets.GKE_CLUSTER_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Deploy to Cloud Run
+      - name: Deploy to GKE
         run: |
-          gcloud run deploy todo-service \
-            --image=gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-service:${{ github.sha }} \
-            --platform=managed \
-            --region=${{ secrets.GCP_REGION || 'us-central1' }} \
-            --allow-unauthenticated \
-            --port=3001
+          # Update the existing deployment image
+          kubectl set image deployment/todo-deployment \
+            todo-service=$IMAGE --namespace=default
+          # Rollout status check
+          kubectl rollout status deployment/todo-deployment --namespace=default
