--- a/.github/workflows/todo-service.yml
+++ b/.github/workflows/todo-service.yml
@@ -27,12 +27,13 @@ jobs:
 
       - name: Configure Docker for GCR
         run: |
-          gcloud auth configure-docker
+          gcloud auth configure-docker ${{secrets.GCP_REGION}}-docker.pkg.dev
+
 
       - name: Build and push Docker image
         run: |
           cd todo-service
-          IMAGE=gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-service:${{ github.sha }}
+          IMAGE=${{secrets.GCP_REGION}}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/test/todo-service:${{ github.sha }}
           docker build -t "$IMAGE" .
           docker push "$IMAGE"
 
