update todo workflow

--- a/.github/workflows/todo-service.yml
+++ b/.github/workflows/todo-service.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+          credentials_json: '${{ secrets.GCP_SA_KEY2 }}'
 
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
