--- a/.github/workflows/todo-service.yml
+++ b/.github/workflows/todo-service.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
-          credentials_json: '${{ secrets.GCP_SA_KEY2 }}'
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
       
       - name: Print Service Account
         run: |
@@ -29,6 +29,10 @@ jobs:
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           export_default_credentials: true
+
+      - name: Activate Service Account
+        run: |
+            gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
 
       - name: Configure Docker for GCR
         run: |
