--- a/.github/workflows/todo-service.yml
+++ b/.github/workflows/todo-service.yml
@@ -18,7 +18,10 @@ jobs:
         uses: google-github-actions/auth@v1
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
-              
+    
+      - name: Install gke-gcloud-auth-plugin
+        run: |
+          sudo apt-get update && sudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin -y    
 
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
