change service type from LoadBalancer to ClusterIP in todo-service.yaml

--- a/scripts/todo-service.yaml
+++ b/scripts/todo-service.yaml
@@ -45,7 +45,7 @@ metadata:
   name: todo-service
   namespace: todo-app
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: todo-service
   ports:
