--- a/.github/workflows/todo-service.yml
+++ b/.github/workflows/todo-service.yml
@@ -15,7 +15,9 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Install Dependencies
-        run: npm ci
+        run:
+          cd todo-service 
+          npm ci
 
       - name: Run Unit Tests
         run: npm test
