Refactor dependency installation in CI/CD workflows for frontend, todo, and user services to streamline commands

--- a/.github/workflows/frontend-service.yml
+++ b/.github/workflows/frontend-service.yml
@@ -19,8 +19,7 @@ jobs:
 
       - name: Install Dependencies
         run:
-          cd frontend-service 
-          npm ci
+          cd frontend-service && npm ci
 
       - name: Run Unit Tests
         run: npm test
