--- a/.github/workflows/user-service.yml
+++ b/.github/workflows/user-service.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Dependencies
-        run: npm ci
+        run: cd user-service && npm ci
 
       - name: Run Unit Tests
         run: npm test
