--- a/.github/workflows/todo-service.yml
+++ b/.github/workflows/todo-service.yml
@@ -19,7 +19,7 @@ jobs:
       
       - name: Install Dependencies
         run:
-          cd todo-service && npm ci
+          npm ci
 
       - name: Run Unit Tests
         run: npm test
@@ -50,7 +50,6 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          cd todo-service
           IMAGE=${{secrets.GCP_REGION}}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/todo-app/todo-service:${{ github.sha }}
           docker build -t "$IMAGE" .
           docker push "$IMAGE"
