Fix working directory for resource retrieval in CI/CD workflow

--- a/.github/workflows/todo-service.yml
+++ b/.github/workflows/todo-service.yml
@@ -74,4 +74,5 @@ jobs:
           # Get resources
           echo "=== Cluster Resources ==="
           kubectl get deployments,pods,services -n todo-app
+        working-directory: .
           
