--- a/.github/workflows/frontend-service.yml
+++ b/.github/workflows/frontend-service.yml
@@ -50,7 +50,6 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          cd user-service
           IMAGE=${{secrets.GCP_REGION}}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/todo-app/user-service:${{ github.sha }}
           docker build -t "$IMAGE" .
           docker push "$IMAGE"
@@ -90,3 +89,4 @@ jobs:
           
           echo "::notice::Service available at: http://$EXTERNAL_IP:3001"
           echo "SERVICE_URL=http://$EXTERNAL_IP:3001" >> $GITHUB_ENV
+        working-directory: .
