--- a/.github/workflows/user-service.yml
+++ b/.github/workflows/user-service.yml
@@ -69,4 +69,5 @@ jobs:
           
           # Verify deployment
           kubectl rollout status deployment/user-service --namespace=todo-app
+        working-directory: .
           
