--- a/.github/workflows/frontend-service.yml
+++ b/.github/workflows/frontend-service.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Install Dependencies
         run:
-          cd frontend-service && npm ci
+          npm ci
 
       - name: Run Unit Tests
         run: npm test
