Update working directory for CI/CD workflow to frontend-gateway

--- a/.github/workflows/frontend-service.yml
+++ b/.github/workflows/frontend-service.yml
@@ -11,7 +11,7 @@ jobs:
       id-token: write
     defaults:
       run:
-        working-directory: frontend-service
+        working-directory: frontend-gateway
 
     steps:
       - name: Checkout repository
