Fix: update environment variable name from MONGO_URI to MONGODB_URI in todo and user services

--- a/scripts/todo-service.yaml
+++ b/scripts/todo-service.yaml
@@ -22,7 +22,7 @@ spec:
           env:
             - name: PORT
               value: "3001"
-            - name: MONGO_URI
+            - name: MONGODB_URI
               valueFrom:
                 secretKeyRef:
                   name: mongo-secret
