--- a/scripts/user-service.yaml
+++ b/scripts/user-service.yaml
@@ -1,4 +1,12 @@
-# user-service.yaml
+apiVersion: v1
+kind: Secret
+metadata:
+  name: jwt-secret
+  namespace: todo-app
+type: Opaque
+stringData:
+  JWT_SECRET: your_jwt_secret
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,7 +24,7 @@ spec:
     spec:
       containers:
         - name: user-service
-          image:  ${IMAGE}
+          image: ${IMAGE}
           ports:
             - containerPort: 3000
           env:
@@ -28,7 +36,10 @@ spec:
                   name: mongo-secret
                   key: MONGO_URI
             - name: JWT_SECRET
-              value: "your_jwt_secret"
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_SECRET
             - name: DB_USER
               valueFrom:
                 secretKeyRef:
