Add CI/CD configuration for frontend, todo, and user services; include monitoring dashboard setup

--- a/.github/workflows/frontend-service.yml
+++ b/.github/workflows/frontend-service.yml
@@ -2,6 +2,10 @@ name: CI/CD Frontend Service
 
 on:
   workflow_dispatch:
+  push:
+    paths:
+      - 'frontend-gateway/**'
+      - scripts/frontend-service.yaml
 
 jobs:
   build-and-deploy:
