--- a/.github/workflows/todo-service.yml
+++ b/.github/workflows/todo-service.yml
@@ -2,6 +2,11 @@ name: CI/CD Todo Service
 
 on:
   workflow_dispatch:
+  push:
+    paths:
+      - 'todo-service/**'
+      - scripts/todo-service.yaml
+
 
 jobs:
   build-and-deploy:
