--- a/.github/workflows/frontend-service.yml
+++ b/.github/workflows/frontend-service.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - 'frontend-gateway/**'
+      - frontend-gateway/**
       - scripts/frontend-service.yaml
 
 jobs:
