--- a/.github/workflows/todo-service.yml
+++ b/.github/workflows/todo-service.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - 'todo-service/**'
+      - todo-service/**
       - scripts/todo-service.yaml
 
 
