Fix: update MongoDB URI key in user service configuration

--- a/scripts/user-service.yaml
+++ b/scripts/user-service.yaml
@@ -34,7 +34,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: mongo-secret
-                  key: MONGO_URI
+                  key: MONGO_URI2
             - name: JWT_SECRET
               valueFrom:
                 secretKeyRef:
