--- a/.github/workflows/db-service.yml
+++ b/.github/workflows/db-service.yml
@@ -39,7 +39,7 @@ jobs:
             --namespace=todo-app \
             --from-literal=MONGO_INITDB_ROOT_USERNAME="${{ secrets.MONGO_ROOT_USER }}" \
             --from-literal=MONGO_INITDB_ROOT_PASSWORD="${{ secrets.MONGO_ROOT_PASSWORD }}" \
-            --from-literal=MONGO_URI="mongodb://${{ secrets.MONGO_ROOT_USER }}:${{ secrets.MONGO_ROOT_PASSWORD }}@mongo:27017/todoapp?authSource=admin" \
+            --from-literal=MONGO_URI="${{ secrets.MONGO_URI }}""
             --dry-run=client -o yaml | kubectl apply -f -
 
       - name: Deploy MongoDB Services
