Fix: add unit tests step to CI/CD workflows and update MongoDB URI to use environment variable

--- a/.github/workflows/todo-service.yml
+++ b/.github/workflows/todo-service.yml
@@ -26,6 +26,9 @@ jobs:
         run:
           npm ci
 
+      - name: Run Unit Tests
+        run: npm test
+
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
